# SmartTableDriver

./: .gitignore  README.md  SmartTableServer.workspace  TableFirmware.atsln  mapa.txt
Daemon/: Daemon.project  Environment.cpp  Environment.hpp  IO.cpp  Image.hpp  ImageDebuggerClient.cpp  ImageDebuggerClient.h  Location.hpp  Message.h  MessageReceiver.cpp  MessageReceiver.hpp  SerialPort.cpp  SerialPort.hpp  TableDevice.hpp  TableGroup.hpp  ansi.h  keyboard.cpp  main.cpp  timeout_error.hpp
DaemonV2/: .gitignore  App.hpp  CMakeLists.txt  Communication.cpp  Communication.hpp  Crc16.hpp  Helper.cpp  Helper.hpp  Image.cpp  Image.hpp  ImageReconstructor.cpp  ImageReconstructor.hpp  InputMessage.cpp  InputMessage.hpp  InputMessageBuilder.cpp  InputMessageBuilder.hpp  Location.hpp  MessageReceiver.cpp  MessageReceiver.hpp  OutputMessage.cpp  OutputMessage.hpp  PhotoModule.hpp  ProgramBase.cpp  ProgramBase.hpp  SerialPort.cpp  SerialPort.hpp  SerialPortReactor.cpp  SerialPortReactor.hpp  TableDevice.cpp  TableDevice.hpp  convert_to_video.sh  main.cpp
DaemonV2/.run/: untitled.run.xml
DaemonV2/Hardware/: Location.hpp  PhotoModule.hpp  TableDevice.cpp  TableDevice.hpp
DaemonV2/ImageDebuggerClient/: ImageDebuggerClient.cpp
DaemonV2/Protocol/: BinaryQueue.cpp  BinaryQueue.hpp  Communication.cpp  Communication.hpp  InputMessage.cpp  InputMessage.hpp  InputMessageBuilder.cpp  InputMessageBuilder.hpp  OutputMessage.cpp  OutputMessage.hpp  TimeoutError.h
DaemonV2/SerialPort/: SerialPort.cpp  SerialPort.hpp  SerialPortReactor.cpp  SerialPortReactor.hpp
DaemonV2/TableFirmware/: protocol.h
DaemonV2/Utility/: AnsiCodes.h  Crc16.hpp  Helper.cpp  Helper.hpp
DaemonV2/Visualizer/: ImageVisualizer.cpp  ImageVisualizer.hpp
DemoProject1/: DemoProject1.cppproj  main_demo1.cpp
DemoProject2/: DemoProject2.cppproj  main_demo2.cpp
ImageDebugger/: ImageDebugger.sln
ImageDebugger/ImageDebugger/: ChannelType.cs  DImage.cs  Form1.Designer.cs  Form1.cs  ImageBrowser.Designer.cs  ImageBrowser.cs  ImageBrowser.resx  ImageDebugger.csproj  ImageType.cs  Palette.cs  PaletteType.cs  PictureBoxNN.cs  Program.cs
ImageDebugger/ImageDebuggerTester/: ImageDebuggerTester.csproj  Program.cs
Server/: .gitignore  SmartTableServer.workspace
Server/Daemon/: .gitignore  CRC.hpp  Daemon.project  Environment.cpp  Message.h  SerialPort.cpp  SerialPort.hpp  main.cpp
SmartTableFirmware/: GccApplication2.cppproj  MessageType.h  SmartTableFirmware.atsln  SmartTableFirmware.cppproj  SmartTableFirmware.cproj  TableFirmware.cppproj  calc_checksum.cpp  checksum.cpp  checksum.h  comm.h  config.cpp  config.h  cpu.cpp  crc16.c  crc16.cpp  crc16.h  eeprom_config.c  eeprom_config.cpp  eeprom_config.h  fuses.cpp  hardware.h  intensity_measurements.cpp  intensity_measurements.h  interrupts.cpp  main.c  main.cpp  protocol.h
SmartTableFirmware/Eeprom/: .gitignore  12.hex  13.hex  21.hex  23.hex  25.hex  33.hex  43.hex  45.hex
TableFirmware/: .gitignore  TableFirmware.cppproj  checksum.h  comm.cpp  comm.h  config.cpp  config.h  cpu.cpp  cpu.h  eeprom_config.cpp  hardware.h  intensity_measurements.h  interrupts.cpp  main.cpp  protocol.h  tester.py
TableFirmware/Eeprom/: 11.hex  14.hex  (+16 more)
TomoTableClient/: Form1.Designer.cs  Form1.cs  Program.cs  TableImage.cs  TomoTableClient.csproj  TomoTableClient.sln  dane_od_izy.txt
TriggerFirmware/: TriggerFirmware.componentinfo.xml  TriggerFirmware.cppproj  config.cpp  config.h  cpu.cpp  cpu.h  fuses.cpp  hardware.h  interrupts.cpp  main.cpp
bootloader/: atmega328p_bootloader.atsln  atmega328p_bootloader.cppproj  comm.h  config.h  demo_boot.cpp  main.cpp  signature.cpp  uart.cpp  uart.h
(+46 files in other folders)
